test/files/neg/sealed-java-enums.check
sealed-java-enums.scala:7: warning: match may not be exhaustive.
It would fail on the following inputs: BLOCKED, TERMINATED, TIMED_WAITING
  def f(state: State) = state match {
                        ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
